# SOPHIE

./: README.md
src/: CMakeLists.txt  Ciphertext.cpp  Ciphertext.h  CommonHeader.h  Context.cpp  Context.h  Decoder.cpp  Decoder.h  Decryptor.cpp  Decryptor.h  Encoder.cpp  Encoder.h  Encryptor.cpp  Encryptor.h  Evaluator.cpp  Evaluator.h  Key.cpp  Key.h  Plaintext.cpp  Plaintext.h  Poly.cpp  Poly.h  SecretKey.cpp  SecretKey.h  Utils.cpp  Utils.h
test/: CMakeLists.txt  Context.cpp  Encoder.cpp  Encryptor.cpp  Evaluator.cpp  Poly.cpp  TestUtils.cpp  TestUtils.h  Utils.cpp  catch.hpp  main.cpp
